# eicSimuBeamEffects

./: README.md
Pythia8/: .gitignore  CMakeLists.txt  Makefile  PythiaBeamShape.cxx  PythiaBeamShapeHepMC.cxx  README.md  dis.steer  eicBeamShape.cxx  eicBeamShape.h  plotBeamShape.C  plotConfigComp.C
Pythia8/cmake/: FindPythia8.cmake  Findfastjet.cmake
Pythia8/steerFiles/: dis_eicBeam_JinHeadOn_18x275  dis_eicBeam_JinHeadOn_35mRad_18x275  dis_eicBeam_JinHeadOn_35mRad_5x41  dis_eicBeam_JinHeadOn_5x41  dis_eicBeam_eA_10x110  dis_eicBeam_eA_18x110  dis_eicBeam_eA_5x110  dis_eicBeam_eA_5x41  dis_eicBeam_hiAcc_10x100  dis_eicBeam_hiAcc_10x275  dis_eicBeam_hiAcc_18x275  dis_eicBeam_hiAcc_5x100  dis_eicBeam_hiAcc_5x41  dis_eicBeam_hiDiv_10x100  dis_eicBeam_hiDiv_10x275  dis_eicBeam_hiDiv_18x275  dis_eicBeam_hiDiv_5x100  dis_eicBeam_hiDiv_5x41  dis_eicBeam_hiDiv_noDivergence_18x275  dis_eicBeam_hiDiv_noDivergence_5x41  dis_eicBeam_hiDiv_noEnergySpread_18x275  dis_eicBeam_hiDiv_noEnergySpread_5x41
